@@ -37,6 +37,7 @@ t/filehandles.t
 t/fileno.t
 t/flock.t
 t/fork.t
+t/internal-backcompat.t
 t/internal.t
 t/kwalitee.t
 t/lethal.t
