@@ -38,6 +38,9 @@ Revision history for autodie
           it would sometimes report less-than-helpful callers like
           '__ANON__' or '(eval)'.
 
+        * TEST: Added internal-backcompat.t to test backwards
+          compatibility of internal interfaces.
+
 1.998 Sat Jan  3 11:19:53 AUSEDT 2009
 
         * BUILD: Removed Module::AutoInstall, which previously
